--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 httpx = "^0.18.2"
 loguru = "^0.5.3"
 notifiers = "^1.2.1"
+markdownify = "^0.9.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.9.6"
